prevents line-wrapping within a code block and adds a horizontal scroll - h/t

--- a/css/data-creative.css
+++ b/css/data-creative.css
@@ -22,3 +22,11 @@ div.page-heading {
     text-align: left;
   }
 }
+
+
+
+/* CODE HIGHLIGHTING */
+
+pre code {
+    white-space: pre;
+}
